--- a/src/main/resources/assets/mubble/lang/en_us.json
+++ b/src/main/resources/assets/mubble/lang/en_us.json
@@ -156,9 +156,9 @@
 	"block.mubble.vanadium_block": "Block of Vanadium",
 	"block.mubble.vanadium_ore": "Vanadium Ore",
 
-	"block.mubble.autumn_oak_sapling": "Autumn Oak Sapling",
-	"block.mubble.autumn_oak_leaves": "Autumn Oak Leaves",
-	"block.mubble.autumn_oak_leaf_pile": "Autumn Oak Leaves Pile",
+	"block.mubble.autumn_birch_sapling": "Autumn Birch Sapling",
+	"block.mubble.autumn_birch_leaves": "Autumn Birch Leaves",
+	"block.mubble.autumn_birch_leaf_pile": "Autumn Birch Leaves Pile",
 
 	"block.mubble.cherry_oak_planks": "Cherry Oak Planks",
 	"block.mubble.pink_cherry_oak_sapling": "Pink Cherry Oak Sapling",
@@ -1043,7 +1043,7 @@
 	"block.mubble.potato_flower": "Potato Flower",
 
 
-	"block.mubble.potted_autumn_oak_sapling": "Potted Autumn Oak Sapling",
+	"block.mubble.potted_autumn_birch_sapling": "Potted Autumn Birch Sapling",
 	"block.mubble.potted_pink_cherry_oak_sapling": "Potted Pink Cherry Oak Sapling",
 	"block.mubble.potted_white_cherry_oak_sapling": "Potted White Cherry Oak Sapling",
 	"block.mubble.potted_palm_sapling": "Potted Palm Sapling",
@@ -1359,10 +1359,9 @@
 
 
 	"comment": "BIOMES",
-	"biome.mubble.autumn_oak_forest": "Autumn Oak Forest",
+	"biome.mubble.pumpkin_pastures": "Pumpkin Pastures",
 	"biome.mubble.pink_cherry_oak_forest": "Pink Cherry Oak Forest",
 	"biome.mubble.white_cherry_oak_forest": "White Cherry Oak Forest",
-	"biome.mubble.permafrost": "Permafrost",
 
 	"biome.mubble.press_garden": "Press Garden",
 
