--- a/src/main/resources/assets/mubble/lang/nl_nl.json
+++ b/src/main/resources/assets/mubble/lang/nl_nl.json
@@ -156,9 +156,9 @@
 	"block.mubble.vanadium_block": "Vanadiumblok",
 	"block.mubble.vanadium_ore": "Vanadiumerts",
 	
-	"block.mubble.autumn_oak_sapling": "Herfsteikkiemplant",
-	"block.mubble.autumn_oak_leaves": "Herfsteikbladeren",
-	"block.mubble.autumn_oak_leaf_pile": "Herfsteikbladeren tapijt",
+	"//block.mubble.autumn_birch_sapling": "Autumn Birch Sapling",
+	"//block.mubble.autumn_birch_leaves": "Autumn Birch Leaves",
+	"//block.mubble.autumn_birch_leaf_pile": "Autumn Birch Leaves Pile",
 	
 	"block.mubble.cherry_oak_planks": "Kerseneikhouten planken",
 	"block.mubble.pink_cherry_oak_sapling": "Rozekerseneikkiemplant",
@@ -1043,7 +1043,7 @@
 	"block.mubble.potato_flower": "Aardappelbloem",
 
 
-	"block.mubble.potted_autumn_oak_sapling": "Gepotte herfsteikkiemplant",
+	"//block.mubble.potted_autumn_birch_sapling": "Potted Autumn Birch Sapling",
 	"block.mubble.potted_pink_cherry_oak_sapling": "Gepotte rozekerseneikkiemplant",
 	"block.mubble.potted_white_cherry_oak_sapling": "Gepotte wittekerseneikkiemplant",
 	"block.mubble.potted_palm_sapling": "Gepotte palmkiemplant",
@@ -1359,10 +1359,9 @@
 
 
 	"comment": "BIOMES",
-	"biome.mubble.autumn_oak_forest": "Herfsteiken bos",
+	"//biome.mubble.pumpkin_pastures": "Pumpkin Pastures",
 	"biome.mubble.pink_cherry_oak_forest": "Rozekerseneiken bos",
 	"biome.mubble.white_cherry_oak_forest": "Wittekerseneiken bos",
-	"biome.mubble.permafrost": "Permafrost",
 	
 	"biome.mubble.press_garden": "Perstuin",
 
