Removed unused strings and updated pumpkin pastures strings to official MC:D names

--- a/src/main/resources/assets/mubble/lang/en_us.json
+++ b/src/main/resources/assets/mubble/lang/en_us.json
@@ -71,12 +71,12 @@
 	"block.mubble.acacia_wood_button": "Acacia Wood Button",
 	"block.mubble.dark_oak_wood_button": "Dark Oak Wood Button",
 
-	"block.mubble.oak_leaf_pile": "Oak Leaves Pile",
-	"block.mubble.spruce_leaf_pile": "Spruce Leaves Pile",
-	"block.mubble.birch_leaf_pile": "Birch Leaves Pile",
-	"block.mubble.jungle_leaf_pile": "Jungle Leaves Pile",
-	"block.mubble.acacia_leaf_pile": "Acacia Leaves Pile",
-	"block.mubble.dark_oak_leaf_pile": "Dark Oak Leaves Pile",
+	"block.mubble.oak_leaf_pile": "Oak Leaf Pile",
+	"block.mubble.spruce_leaf_pile": "Spruce Leaf Pile",
+	"block.mubble.birch_leaf_pile": "Birch Leaf Pile",
+	"block.mubble.jungle_leaf_pile": "Jungle Leaf Pile",
+	"block.mubble.acacia_leaf_pile": "Acacia Leaf Pile",
+	"block.mubble.dark_oak_leaf_pile": "Dark Oak Leaf Pile",
 
 	"block.mubble.cobblestone_bricks": "Cobblestone Bricks",
 	"block.mubble.cobblestone_brick_stairs": "Cobblestone Brick Stairs",
@@ -158,7 +158,7 @@
 
 	"block.mubble.autumn_birch_sapling": "Autumn Birch Sapling",
 	"block.mubble.autumn_birch_leaves": "Autumn Birch Leaves",
-	"block.mubble.autumn_birch_leaf_pile": "Autumn Birch Leaves Pile",
+	"block.mubble.autumn_birch_leaf_pile": "Autumn Birch Leaf Pile",
 
 	"block.mubble.cherry_oak_planks": "Cherry Oak Planks",
 	"block.mubble.pink_cherry_oak_sapling": "Pink Cherry Oak Sapling",
@@ -168,9 +168,9 @@
 	"block.mubble.cherry_oak_wood": "Cherry Oak Wood",
 	"block.mubble.stripped_cherry_oak_wood": "Stripped Cherry Oak Wood",
 	"block.mubble.pink_cherry_oak_leaves": "Pink Cherry Oak Leaves",
-	"block.mubble.pink_cherry_oak_leaf_pile": "Pink Cherry Oak Leaves Pile",
+	"block.mubble.pink_cherry_oak_leaf_pile": "Pink Cherry Oak Leaf Pile",
 	"block.mubble.white_cherry_oak_leaves": "White Cherry Oak Leaves",
-	"block.mubble.white_cherry_oak_leaf_pile": "White Cherry Oak Leaves Pile",
+	"block.mubble.white_cherry_oak_leaf_pile": "White Cherry Oak Leaf Pile",
 	"block.mubble.cherry_oak_pressure_plate": "Cherry Oak Pressure Plate",
 	"block.mubble.cherry_oak_trapdoor": "Cherry Oak Trapdoor",
 	"block.mubble.cherry_oak_button": "Cherry Oak Button",
@@ -192,7 +192,7 @@
 	"block.mubble.palm_wood": "Palm Wood",
 	"block.mubble.stripped_palm_wood": "Stripped Palm Wood",
 	"block.mubble.palm_leaves": "Palm Leaves",
-	"block.mubble.palm_leaf_pile": "Palm Leaves Pile",
+	"block.mubble.palm_leaf_pile": "Palm Leaf Pile",
 	"block.mubble.palm_pressure_plate": "Palm Pressure Plate",
 	"block.mubble.palm_trapdoor": "Palm Trapdoor",
 	"block.mubble.palm_button": "Palm Button",
@@ -965,9 +965,9 @@
 	"block.mubble.press_garden_wood": "Press Garden Wood",
 	"block.mubble.stripped_press_garden_wood": "Stripped Press Garden Wood",
 	"block.mubble.pink_press_garden_leaves": "Pink Press Garden Leaves",
-	"block.mubble.pink_press_garden_leaf_pile": "Pink Press Garden Leaves Pile",
+	"block.mubble.pink_press_garden_leaf_pile": "Pink Press Garden Leaf Pile",
 	"block.mubble.red_press_garden_leaves": "Red Press Garden Leaves",
-	"block.mubble.red_press_garden_leaf_pile": "Red Press Garden Leaves Pile",
+	"block.mubble.red_press_garden_leaf_pile": "Red Press Garden Leaf Pile",
 	"block.mubble.press_garden_pressure_plate": "Press Garden Pressure Plate",
 	"block.mubble.press_garden_trapdoor": "Press Garden Trapdoor",
 	"block.mubble.press_garden_button": "Press Garden Button",
@@ -992,7 +992,7 @@
 	"block.mubble.scarlet_wood": "Scarlet Wood",
 	"block.mubble.stripped_scarlet_wood": "Stripped Scarlet Wood",
 	"block.mubble.scarlet_leaves": "Scarlet Leaves",
-	"block.mubble.scarlet_leaf_pile": "Scarlet Leaves Pile",
+	"block.mubble.scarlet_leaf_pile": "Scarlet Leaf Pile",
 	"block.mubble.scarlet_pressure_plate": "Scarlet Pressure Plate",
 	"block.mubble.scarlet_trapdoor": "Scarlet Trapdoor",
 	"block.mubble.scarlet_button": "Scarlet Button",
@@ -1073,40 +1073,6 @@
 	"block.mubble.potted_scarlet_orchid": "Potted Scarlet Orchid",
 	"block.mubble.potted_potato_flower": "Potted Potato Flower",
 
-	"bannerpp.pattern.mubble.star.blue": "Blue Star",
-	"bannerpp.pattern.mubble.star.light_blue": "Light Blue Star",
-	"bannerpp.pattern.mubble.star.cyan": "Cyan Star",
-	"bannerpp.pattern.mubble.star.green": "Green Star",
-	"bannerpp.pattern.mubble.star.lime": "Lime Star",
-	"bannerpp.pattern.mubble.star.yellow": "Yellow Star",
-	"bannerpp.pattern.mubble.star.orange": "Orange Star",
-	"bannerpp.pattern.mubble.star.red": "Red Star",
-	"bannerpp.pattern.mubble.star.pink": "Pink Star",
-	"bannerpp.pattern.mubble.star.magenta": "Magenta Star",
-	"bannerpp.pattern.mubble.star.purple": "Purple Star",
-	"bannerpp.pattern.mubble.star.brown": "Brown Star",
-	"bannerpp.pattern.mubble.star.white": "White Star",
-	"bannerpp.pattern.mubble.star.light_gray": "Light Gray Star",
-	"bannerpp.pattern.mubble.star.gray": "Gray Star",
-	"bannerpp.pattern.mubble.star.black": "Black Star",
-
-	"bannerpp.pattern.mubble.smash_ball.blue": "Blue Smash Ball",
-	"bannerpp.pattern.mubble.smash_ball.light_blue": "Light Blue Smash Ball",
-	"bannerpp.pattern.mubble.smash_ball.cyan": "Cyan Smash Ball",
-	"bannerpp.pattern.mubble.smash_ball.green": "Green Smash Ball",
-	"bannerpp.pattern.mubble.smash_ball.lime": "Lime Smash Ball",
-	"bannerpp.pattern.mubble.smash_ball.yellow": "Yellow Smash Ball",
-	"bannerpp.pattern.mubble.smash_ball.orange": "Orange Smash Ball",
-	"bannerpp.pattern.mubble.smash_ball.red": "Red Smash Ball",
-	"bannerpp.pattern.mubble.smash_ball.pink": "Pink Smash Ball",
-	"bannerpp.pattern.mubble.smash_ball.magenta": "Magenta Smash Ball",
-	"bannerpp.pattern.mubble.smash_ball.purple": "Purple Smash Ball",
-	"bannerpp.pattern.mubble.smash_ball.brown": "Brown Smash Ball",
-	"bannerpp.pattern.mubble.smash_ball.white": "White Smash Ball",
-	"bannerpp.pattern.mubble.smash_ball.light_gray": "Light Gray Smash Ball",
-	"bannerpp.pattern.mubble.smash_ball.gray": "Gray Smash Ball",
-	"bannerpp.pattern.mubble.smash_ball.black": "Black Smash Ball",
-
 
 
 	"comment": "ITEMS",
@@ -1145,10 +1111,6 @@
 	"item.mubble.jingle_bells": "Jingle Bells",
 	"item.mubble.small_bulb": "Small Bulb",
 	"item.mubble.totem_of_ascending": "Totem of Ascending",
-	"item.mubble.star_banner_pattern": "Banner Pattern",
-	"item.mubble.star_banner_pattern.desc": "Star",
-	"item.mubble.smash_ball_banner_pattern": "Banner Pattern",
-	"item.mubble.smash_ball_banner_pattern.desc": "Smash Ball",
 
 
 	"item.mubble.super_mushroom": "Super Mushroom",
