--- a/src/main/resources/assets/mubble/lang/en_gb.json
+++ b/src/main/resources/assets/mubble/lang/en_gb.json
@@ -156,6 +156,9 @@
 	"block.mubble.vanadium_block": "Block of Vanadium",
 	"block.mubble.vanadium_ore": "Vanadium Ore",
 	
+	"block.mubble.autumn_oak_sapling": "Autumn Oak Sapling",
+	"block.mubble.autumn_oak_leaves": "Autumn Oak Leaves",
+	"block.mubble.autumn_oak_leaf_pile": "Autumn Oak Leaves Pile",
 	"//block.mubble.autumn_birch_sapling": "Autumn Birch Sapling",
 	"//block.mubble.autumn_birch_leaves": "Autumn Birch Leaves",
 	"//block.mubble.autumn_birch_leaf_pile": "Autumn Birch Leaves Pile",
@@ -1043,7 +1046,8 @@
 	"block.mubble.potato_flower": "Potato Flower",
 
 
-	"//block.mubble.potted_autumn_birch_sapling": "Potted Autumn Birch Sapling",
+	"block.mubble.potted_autumn_oak_sapling": "Potted Autumn Oak Sapling",
+	"block.mubble.potted_autumn_birch_sapling": "Potted Autumn Birch Sapling",
 	"block.mubble.potted_pink_cherry_oak_sapling": "Potted Pink Cherry Oak Sapling",
 	"block.mubble.potted_white_cherry_oak_sapling": "Potted White Cherry Oak Sapling",
 	"block.mubble.potted_palm_sapling": "Potted Palm Sapling",
