--- a/src/main/resources/assets/mubble/lang/pt_br.json
+++ b/src/main/resources/assets/mubble/lang/pt_br.json
@@ -156,6 +156,9 @@
 	"block.mubble.vanadium_block": "Bloco de Vanadium",
 	"block.mubble.vanadium_ore": "Minério de Vanadium",
 	
+	"block.mubble.autumn_oak_sapling": "Muda de Carvalho de Outono",
+	"block.mubble.autumn_oak_leaves": "Folhas de Carvalho de Outono",
+	"block.mubble.autumn_oak_leaf_pile": "Tapete de Folhas de Carvalho de Outono",
 	"//block.mubble.autumn_birch_sapling": "Autumn Birch Sapling",
 	"//block.mubble.autumn_birch_leaves": "Autumn Birch Leaves",
 	"//block.mubble.autumn_birch_leaf_pile": "Autumn Birch Leaves Pile",
@@ -1043,6 +1046,7 @@
 	"block.mubble.potato_flower": "Flor de Batata",
 
 
+	"block.mubble.potted_autumn_oak_sapling": "Vaso de Muda de Carvalho de Outono",
 	"//block.mubble.potted_autumn_birch_sapling": "Potted Autumn Birch Sapling",
 	"block.mubble.potted_pink_cherry_oak_sapling": "Vaso de Muda de Carvalho Cereja Rosa",
 	"block.mubble.potted_white_cherry_oak_sapling": "Vaso de Muda de Carvalho Cereja Branca",
