--- a/src/main/resources/assets/mubble/lang/en_ud.json
+++ b/src/main/resources/assets/mubble/lang/en_ud.json
@@ -156,6 +156,9 @@
 	"block.mubble.vanadium_block": "ɯnᴉpɐuɐᗺ ɟo ʞɔolᗺ",
 	"block.mubble.vanadium_ore": "ǝɹO ɯnᴉpɐuɐΛ",
 
+	"block.mubble.autumn_oak_sapling": "ƃuᴉldɐS ʞɐO uɯnʇn∀",
+	"block.mubble.autumn_oak_leaves": "sǝʌɐǝ˥ ʞɐO uɯnʇn∀",
+	"block.mubble.autumn_oak_leaf_pile": "ʇǝdɹɐƆ sǝʌɐǝ˥ ʞɐO uɯnʇn∀",
 	"//block.mubble.autumn_birch_sapling": "Autumn Birch Sapling",
 	"//block.mubble.autumn_birch_leaves": "Autumn Birch Leaves",
 	"//block.mubble.autumn_birch_leaf_pile": "Autumn Birch Leaves Pile",
@@ -1043,6 +1046,7 @@
 	"block.mubble.potato_flower": "ɹǝʍolℲ oʇɐʇoԀ",
 
 
+	"block.mubble.potted_autumn_oak_sapling": "ƃuᴉldɐS ʞɐO uɯnʇn∀ pǝʇʇoԀ",
 	"//block.mubble.potted_autumn_birch_sapling": "Potted Autumn Birch Sapling",
 	"block.mubble.potted_pink_cherry_oak_sapling": "ƃuᴉldɐS ʞɐO ʎɹɹǝɥƆ ʞuᴉԀ pǝʇʇoԀ",
 	"block.mubble.potted_white_cherry_oak_sapling": "ƃuᴉldɐS ʞɐO ʎɹɹǝɥƆ ǝʇᴉɥM pǝʇʇoԀ",
