--- a/src/main/resources/assets/mubble/lang/fr_fr.json
+++ b/src/main/resources/assets/mubble/lang/fr_fr.json
@@ -156,6 +156,9 @@
 	"block.mubble.vanadium_block": "Bloc de vanadium",
 	"block.mubble.vanadium_ore": "Minerai de vanadium",
 	
+	"block.mubble.autumn_oak_sapling": "Pousse de chêne d'automne",
+	"block.mubble.autumn_oak_leaves": "Feuilles de chêne d'automne",
+	"block.mubble.autumn_oak_leaf_pile": "Pile de feuilles de chêne d'automne",
 	"block.mubble.autumn_birch_sapling": "Pousse de bouleau d'automne",
 	"block.mubble.autumn_birch_leaves": "Feuilles de bouleau d'automne",
 	"block.mubble.autumn_birch_leaf_pile": "Pile de feuilles de bouleau d'automne",
@@ -1043,6 +1046,7 @@
 	"block.mubble.potato_flower": "Fleur patate",
 
 
+	"block.mubble.potted_autumn_oak_sapling": "Pousse de chêne d'automne en pot",
 	"block.mubble.potted_autumn_birch_sapling": "Pousse de bouleau d'automne en pot",
 	"block.mubble.potted_pink_cherry_oak_sapling": "Pousse de cerisier rose en pot",
 	"block.mubble.potted_white_cherry_oak_sapling": "Pousse de cerisier blanc en pot",
