--- a/src/main/resources/assets/mubble/lang/nl_nl.json
+++ b/src/main/resources/assets/mubble/lang/nl_nl.json
@@ -1292,7 +1292,7 @@
 
 	"comment": "ENCHANTMENTS",
 	"enchantment.mubble.telekinesis": "Afstandelijke Voorwerpbeweging",
-	"//enchantment.mubble.ignorance_curse": "Curse of Ignorance",
+	"enchantment.mubble.ignorance_curse": "Vloek der Ontwetendheid",
 
 
 
@@ -1329,11 +1329,11 @@
 	"biome.mubble.pumpkin_pastures": "Pompoen weiland",
 	"biome.mubble.pink_cherry_oak_forest": "Rozekerseneiken bos",
 	"biome.mubble.white_cherry_oak_forest": "Wittekerseneiken bos",
-	"//biome.mubble.tall_crimson_forest": "Tall Crimson Forest",
-	"//biome.mubble.tall_warped_forest": "Tall Warped Forest",
-	"//biome.mubble.tritanopian_gallery": "Tritanopian Gallery",
-	"//biome.mubble.achromatopsian_gallery": "Achromatopsian Gallery",
-	"//biome.mubble.protanopian_gallery": "Protanopian Gallery",
+	"biome.mubble.tall_crimson_forest": "Hoog helrood bos",
+	"biome.mubble.tall_warped_forest": "Hoog spookachtig bos",
+	"biome.mubble.tritanopian_gallery": "Tritanopische galerij",
+	"biome.mubble.achromatopsian_gallery": "Achromatopsian galerij",
+	"biome.mubble.protanopian_gallery": "Protanopishe galerij",
 	
 	"biome.mubble.press_garden": "Perstuin",
 
